actualizacion del registro vehiculo tmabien agregado el eliminar y el modificar

--- a/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
@@ -38,7 +38,9 @@
       </label>
       <ul class="sub-menu">
         <li><a href="vehiculos/registrar_vehiculos">Registrar vehiculos</a></li>
-        <li><a href="vehiculos/listar_vehiculos">Listar vehiculos</a></li>
+        <li>
+          <a href="vehiculos/listar_admin_vehiculos">Listar vehiculos(admin)</a>
+        </li>
         <li><a href="vehiculos/buscar_vehiculos">Buscar vehiculos</a></li>
       </ul>
       <input type="checkbox" class="menu-toggle" id="menu4" />
