--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-admin-vehiculos/listar-admin-vehiculos.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-admin-vehiculos/listar-admin-vehiculos.component.html
@@ -5,38 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-
   <body>
     <app-navbar></app-navbar>
-
-    <div>
+    <div class="litle">
       <h2 style="text-align: center">LISTA DE VEHICULOS</h2>
     </div>
 
     <div class="container">
-      <table
-        mat-table
-        [dataSource]="dataSource"
-        class="mat-elevation-z8 custom-table"
-        matSort
-      >
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
+              The actual rendered columns are set as a property on the row definition" -->
 
-        <!-- codigo Column -->
+        <!-- idVehiculo Column -->
         <ng-container matColumnDef="codigo">
           <th mat-header-cell *matHeaderCellDef>codigo</th>
           <td mat-cell *matCellDef="let element">
-            <!-- Mostrar un campo de entrada cuando la fila esté en modo de edición -->
-            <input
-              *ngIf="editarVehiculo === element"
-              [(ngModel)]="element.idVehiculo"
-              matInput
-            />
-            <!-- Mostrar el valor cuando no esté en modo de edición -->
-            <span *ngIf="editarVehiculo !== element">{{
-              element.idVehiculo
-            }}</span>
+            {{ element.idVehiculo }}
           </td>
         </ng-container>
 
@@ -44,166 +28,88 @@
         <ng-container matColumnDef="placa">
           <th mat-header-cell *matHeaderCellDef>placa</th>
           <td mat-cell *matCellDef="let element">
-            <!-- Mostrar un campo de entrada cuando la fila esté en modo de edición -->
-            <input
-              *ngIf="editarVehiculo === element"
-              [(ngModel)]="element.placaVehiculo"
-              matInput
-            />
-            <!-- Mostrar el valor cuando no esté en modo de edición -->
-            <span *ngIf="editarVehiculo !== element">{{
-              element.placaVehiculo
-            }}</span>
+            {{ element.placaVehiculo }}
           </td>
         </ng-container>
 
-        <!-- categoria Column -->
+        <!-- categoriaVehiculo Column -->
         <ng-container matColumnDef="categoria">
           <th mat-header-cell *matHeaderCellDef>categoria</th>
           <td mat-cell *matCellDef="let element">
-            <!-- Mostrar un campo de entrada cuando la fila esté en modo de edición -->
-            <input
-              *ngIf="editarVehiculo === element"
-              [(ngModel)]="element.categoriaVehiculo"
-              matInput
-            />
-            <!-- Mostrar el valor cuando no esté en modo de edición -->
-            <span *ngIf="editarVehiculo !== element">{{
-              element.categoriaVehiculo
-            }}</span>
+            {{ element.categoriaVehiculo }}
           </td>
         </ng-container>
 
-        <!-- color Column -->
+        <!-- colorVehiculo Column -->
         <ng-container matColumnDef="color">
           <th mat-header-cell *matHeaderCellDef>color</th>
           <td mat-cell *matCellDef="let element">
-            <!-- Mostrar un campo de entrada cuando la fila esté en modo de edición -->
-            <input
-              *ngIf="editarVehiculo === element"
-              [(ngModel)]="element.colorVehiculo"
-              matInput
-            />
-            <!-- Mostrar el valor cuando no esté en modo de edición -->
-            <span *ngIf="editarVehiculo !== element">{{
-              element.colorVehiculo
-            }}</span>
+            {{ element.colorVehiculo }}
           </td>
         </ng-container>
-
         <!-- marca Column -->
         <ng-container matColumnDef="marca">
           <th mat-header-cell *matHeaderCellDef>marca</th>
           <td mat-cell *matCellDef="let element">
-            <!-- Mostrar un campo de entrada cuando la fila esté en modo de edición -->
-            <input
-              *ngIf="editarVehiculo === element"
-              [(ngModel)]="element.marcaVehiculo"
-              matInput
-            />
-            <!-- Mostrar el valor cuando no esté en modo de edición -->
-            <span *ngIf="editarVehiculo !== element">{{
-              element.marcaVehiculo
-            }}</span>
-          </td>
-        </ng-container>
+            {{ element.marcaVehiculo }}
+          </td></ng-container
+        >
 
         <!-- tamanio Column -->
         <ng-container matColumnDef="tamanio">
           <th mat-header-cell *matHeaderCellDef>tamanio</th>
           <td mat-cell *matCellDef="let element">
-            <!-- Mostrar un campo de entrada cuando la fila esté en modo de edición -->
-            <input
-              *ngIf="editarVehiculo === element"
-              [(ngModel)]="element.tamanioVehiculo"
-              matInput
-            />
-            <!-- Mostrar el valor cuando no esté en modo de edición -->
-            <span *ngIf="editarVehiculo !== element">{{
-              element.tamanioVehiculo
-            }}</span>
-          </td>
-        </ng-container>
+            {{ element.tamanioVehiculo }}
+          </td></ng-container
+        >
 
-        <!-- tarjeta de propiedad Column -->
+        <!-- tarjetaPropiedadVehiculo Column -->
         <ng-container matColumnDef="tarjeta de propiedad">
           <th mat-header-cell *matHeaderCellDef>tarjeta de propiedad</th>
           <td mat-cell *matCellDef="let element">
-            <!-- Mostrar un campo de entrada cuando la fila esté en modo de edición -->
-            <input
-              *ngIf="editarVehiculo === element"
-              [(ngModel)]="element.tarjetaPropiedadVehiculo"
-              matInput
-            />
-            <!-- Mostrar el valor cuando no esté en modo de edición -->
-            <span *ngIf="editarVehiculo !== element">{{
-              element.tarjetaPropiedadVehiculo
-            }}</span>
-          </td>
-        </ng-container>
+            {{ element.tarjetaPropiedadVehiculo }}
+          </td></ng-container
+        >
 
-        <ng-container matColumnDef="Modificar">
-          <th mat-header-cell *matHeaderCellDef>Modificar</th>
-          <td
-            mat-cell
-            *matCellDef="let element; let i = index"
-            [formGroup]="element"
-          >
-            <!-- Si no se está editando, muestra el botón "Modificar" -->
-            <ng-container *ngIf="!editarVehiculo">
-              <button
-                mat-icon-button
-                class="material-icons app-toolbar-menu save-button"
-                matTooltip="Edit"
-                color="primary"
-                (click)="modificar(element)"
-              >
-                <mat-icon>edit</mat-icon>
-              </button>
+        <!-- imagenVehiculo Column -->
+        <ng-container matColumnDef="imagen">
+          <th mat-header-cell *matHeaderCellDef>imagen</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.imagenVehiculo }}
+          </td></ng-container
+        >
 
-              <button
-                mat-icon-button
-                class="material-icons app-toolbar-menu delete-button"
-                matTooltip="Delete"
-                color="warn"
-                (click)="eliminar(element.idVehiculo)"
-              >
-                <mat-icon>delete</mat-icon>
-              </button>
-            </ng-container>
-            <!-- Si se está editando, muestra los botones de "Guardar" y "Cancelar" -->
-            <ng-container *ngIf="editarVehiculo === element">
-              <button
-                mat-icon-button
-                class="material-icons app-toolbar-menu save-button"
-                matTooltip="Save Changes"
-                (click)="guardarEdicion(element)"
-              >
-                <mat-icon>check_circle</mat-icon>
-              </button>
-
-              <button
-                mat-icon-button
-                class="material-icons app-toolbar-menu cancel-button"
-                matTooltip="Cancel Changes"
-                color="warn"
-                (click)="cancelarEdicion()"
-              >
-                <mat-icon>cancel</mat-icon>
-              </button>
-            </ng-container>
-          </td>
-        </ng-container>
-
+        <ng-container matColumnDef="accion01">
+          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <td mat-cell *matCellDef="let element">
+            <button
+              mat-raised-button
+              color="warn"
+              [routerLink]="['ediciones', element.idVehiculo]"
+            >
+              Actualizar
+            </button>
+          </td></ng-container
+        >
+        <ng-container matColumnDef="accion02">
+          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <td mat-cell *matCellDef="let element">
+            <button
+              mat-raised-button
+              color="accent"
+              (click)="eliminar(element.idVehiculo)"
+            >
+              Eliminar
+            </button>
+          </td></ng-container
+        >
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
-      <br />
       <mat-paginator
-        [pageSize]="5"
-        [pageSizeOptions]="[5, 10, 25]"
+        [pageSizeOptions]="[5, 10, 25, 100]"
+        showFirstLastButtons
       ></mat-paginator>
     </div>
-    <app-footer></app-footer>
   </body>
 </html>
