implementacion del filtrar en las  tablas de  horario - localizaciones - vehiculos - horarios-Esatcionaminto

--- a/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/listar-admin-horario-estacionamiento/listar-admin-horario-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/listar-admin-horario-estacionamiento/listar-admin-horario-estacionamiento.component.html
@@ -13,6 +13,14 @@
     </div>
 
     <div class="container_contenido">
+      <mat-form-field>
+        <input
+          style="text-align: left"
+          matInput
+          (keyup)="filter($event)"
+          placeholder="Bucar por.."
+        />
+      </mat-form-field>
       <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
