--- a/SAFE_PARKING_FRONT/src/app/components/horario/listar-admin-horario/listar-admin-horario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/horario/listar-admin-horario/listar-admin-horario.component.css
@@ -2,6 +2,7 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f2f2f2;
+
 }
 
 table {
@@ -19,7 +20,8 @@ table {
   margin-top: 50px;
 }
 
-h1 {
+h2 {
   color: #333;
+  padding: 40px;
 }
 
