--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-admin-localizaciones/listar-admin-localizaciones.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-admin-localizaciones/listar-admin-localizaciones.component.css
@@ -1,68 +1,26 @@
+/*Estilos del form*/
 body {
   font-family: Arial, sans-serif;
   background-color: #f2f2f2;
-  margin: 0;
-  padding: 0;
+
 }
 
-.center {
-  text-align: center;
-  color: #333;
-}
-
-.center-table {
-  text-align: center;
-  margin: 0 auto; /* Centra la tabla horizontalmente */
+table {
+  background-color: rgb(255, 255, 255);
 }
 
 .container {
-  background-color: #fff;
-  border: 1px solid #ccc;
-  margin: 20px auto; /* Centra el contenedor horizontalmente */
+  width: 50%;
   padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
+  /* Centra horizontalmente */
+  margin-top: 50px;
 }
 
-.custom-table {
-  width: 100%;
-  border-collapse: collapse; /* Para eliminar espacios entre las celdas */
-}
-
-th {
-  background-color: #cf1010;
-  color: #4B4848; /* Color corregido */
-}
-
-td {
-  background-color: #f2f2f2;
+h2 {
   color: #333;
-}
-
-.menu-container {
-  background-color: green;
-  display: flex;
-  justify-content: center;
-}
-
-ul.menu {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  background-color: green;
-}
-
-li.menu-item {
-  margin: 0 10px;
-}
-
-li.menu-item a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li.menu-item a:hover {
-  background-color: #555;
+  padding: 40px;
 }
