--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/buscar-vehiculos/buscar-vehiculos.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/buscar-vehiculos/buscar-vehiculos.component.html
@@ -10,7 +10,6 @@
     </head>
 
     <body>
-
       <div class="search-form">
         <div class="form-group">
           <label for="vehiculoIdInput">Ingrese el ID del vehículo:</label>
@@ -44,9 +43,12 @@
             <h1>Tarjeta de Propiedad</h1>
             <p>{{ vehiculo.tarjetaPropiedadVehiculo }}</p>
           </div>
+          <div class="info-box">
+            <h1>Imagen</h1>
+            <p>{{ vehiculo.imagenVehiculo }}</p>
+          </div>
         </div>
       </div>
     </body>
   </html>
 </div>
-<app-footer></app-footer>
