--- a/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
@@ -21,14 +21,19 @@
       </label>
       <ul class="sub-menu">
         <li>
-          <a href="membresia/registrar_membresias">Registrar membresias</a>
+          <a href="membresias/registrar_membresias">Registrar membresias</a>
         </li>
         <li>
-          <a href="membresia/listar_usuario_membresias"
+          <a href="membresias/listar_usuario_membresias"
             >Listar membresias (user)</a
           >
         </li>
-        <li><a href="membresia/buscar_membresias">Buscar membresias</a></li>
+        <li><a href="membresias/buscar_membresias">Buscar membresias</a></li>
+        <li>
+          <a href="membresias/listar_admin_membresias"
+            >Listar membresias (Admin)</a
+          >
+        </li>
       </ul>
       <input type="checkbox" class="menu-toggle" id="menu3" />
       <label for="menu3" class="menu">
@@ -73,9 +78,15 @@
         <mat-icon class="icon-up">arrow_drop_up</mat-icon>
       </label>
       <ul class="sub-menu">
-        <li><a href="vehiculos/X">Registrar incidentes</a></li>
-        <li><a href="vehiculos/X">Listar incidentes</a></li>
-        <li><a href="vehiculos/X">Buscar incidentes</a></li>
+        <li>
+          <a href="incidentes/registrar_incidentes">Registrar incidentes</a>
+        </li>
+        <li>
+          <a href="incidentes/listar_admin_incidentes"
+            >Listar incidentes (admin)</a
+          >
+        </li>
+        <li><a href="incidentes/buscar_incidentes">Buscar incidentes</a></li>
       </ul>
 
       <input type="checkbox" class="menu-toggle" id="menu7" />
