--- a/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
@@ -150,6 +150,19 @@
       <li><a href="reservaestacionamiento/listar_admin_reserva_estacionamientos">Listar reservas</a></li>
       
     </ul>
+
+    <input type="checkbox" class="menu-toggle" id="menu14">
+    <label for="menu14" class="menu">
+      <i class="material-icons">directions_car</i> Estacionamiento
+      <mat-icon class="icon-down">arrow_drop_down</mat-icon>
+      <mat-icon class="icon-up">arrow_drop_up</mat-icon>
+    </label>
+    <ul class="sub-menu">
+      <li><a href="estacionamiento/registrar_estacionamientos">Registrar estacionamientos</a></li>
+      <li><a href="estacionamiento/listar_admin_estacionamientos">Listar estacionamientos (admin)</a></li>
+      <li><a href="estacionamiento/">Listar reservas</a></li>
+    </ul>
+
   </div>
   
 </body>
