--- a/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.html
@@ -10,6 +10,14 @@
     <div class="container" style="text-align: center">
         <h2>Registro de Comentario</h2>
         <form [formGroup]="form" (submit)="aceptar()" class="example-form">
+            
+            <mat-form-field class="example-full-width" *ngIf="edicion">
+                <mat-label>codigo</mat-label>
+                <input matInput placeholder="Id" formControlName="idComentario" readonly="true"/>
+              </mat-form-field>
+              <br />
+
+
             <mat-form-field class="example-full-width">
                 <mat-label>Comentario</mat-label>
                 <input matInput placeholder="contenido" formControlName="contenido" />
