--- a/SAFE_PARKING_FRONT/src/app/components/comentario/listar-admin-comentario/listar-admin-comentario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/listar-admin-comentario/listar-admin-comentario.component.html
@@ -7,7 +7,15 @@
 </head>
 <body>
     <div class="container">
-        <h2>Lista Comentarios</h2>
+        <h2 style="text-align: center">Lista Comentarios</h2>
+        
+        <div style="text-align: right;">
+          <button mat-raised-button color="primary" routerLink="/comentarios/registrar_comentarios">Nuevo</button>
+        </div>
+        <mat-form-field>
+          <input matInput (keyup)=filter($event) placeholder="buscar"/>
+        </mat-form-field>
+        
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
             <!--- Note that these columns can be defined in any order.
@@ -41,6 +49,32 @@
                 <th mat-header-cell *matHeaderCellDef> id de la reserva</th>
                 <td mat-cell *matCellDef="let element"> {{element.reservaEstacionamiento.idReservaEstacionamiento}} </td>
               </ng-container>
+
+              <ng-container matColumnDef="modificar">
+                <th mat-header-cell *matHeaderCellDef>Acciones</th>
+                <td mat-cell *matCellDef="let element">
+                  <button
+                    mat-raised-button
+                    color="warn"
+                    [routerLink]="['/comentarios/modificar_comentarios/', element.idComentario]"
+                  >
+                    Actualizar
+                  </button>
+                </td></ng-container
+              >
+              <ng-container matColumnDef="eliminar">
+                <th mat-header-cell *matHeaderCellDef>Acciones</th>
+                <td mat-cell *matCellDef="let element">
+                  <button
+                    mat-raised-button
+                    color="accent"
+                    (click)="eliminar(element.idComentario)"
+                    
+                  >
+                    Eliminar
+                  </button>
+                </td></ng-container>
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           </table>
