Creación e implementación del componente buscar de la entidad Comentario
Creación e implementación del componente buscar de la entidad Comentario

--- a/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
@@ -89,7 +89,7 @@
     <ul class="sub-menu">
       <li><a href="comentarios/registrar_comentarios">Registrar comentarios</a></li>
       <li><a href="comentarios/listar_comentarios_admin">Listar comentarios</a></li>
-      <li><a href="comentarios">Buscar comentarios</a></li>
+      <li><a href="comentarios/buscar_comentarios">Buscar comentarios</a></li>
     </ul>
 
     <input type="checkbox" class="menu-toggle" id="menu9">
