--- a/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -73,9 +75,9 @@
 
             <br />
             <button mat-raised-button color="primary">Aceptar</button>
-            <button mat-raised-button color="warn" routerLink="/comentarios">
+            <!--<button mat-raised-button color="warn" routerLink="/comentarios">
                 Cancelar
-            </button>
+            </button>-->
             <p>{{ mensaje }}</p>
         </form>
     </div>
