--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/listar-admin-usuario/listar-admin-usuario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/listar-admin-usuario/listar-admin-usuario.component.html
@@ -13,6 +13,14 @@
       <div class="container">
         <br />
         <h2 style="text-align: center">Lista de Usuarios</h2>
+
+        <div style="text-align: right;">
+          <button mat-raised-button color="primary" routerLink="/usuarios/registrar_usuarios">Nuevo</button>
+        </div>
+        <mat-form-field>
+          <input matInput (keyup)=filter($event) placeholder="buscar"/>
+        </mat-form-field>
+
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
           <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
@@ -110,6 +118,30 @@
               {{ element.enabled }}
             </td>
           </ng-container>
+
+          <ng-container matColumnDef="modificar">
+            <th mat-header-cell *matHeaderCellDef>Acciones</th>
+            <td mat-cell *matCellDef="let element">
+              <button
+                mat-raised-button
+                color="warn"
+                [routerLink]="['/usuarios/modificar_usuarios/', element.idUsuario]"
+              >
+                Actualizar
+              </button>
+            </td></ng-container
+          >
+          <ng-container matColumnDef="eliminar">
+            <th mat-header-cell *matHeaderCellDef>Acciones</th>
+            <td mat-cell *matCellDef="let element">
+              <button
+                mat-raised-button
+                color="accent"
+                (click)="eliminar(element.idUsuario)"
+              >
+                Eliminar
+              </button>
+            </td></ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
