Incorporacion y unificacion de Entidades

--- a/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.html
@@ -29,20 +29,17 @@
           </mat-form-field>
 
           <mat-form-field class="example-full-width">
-            <mat-label>
-              <mat-icon>attach_money</mat-icon> Tipo de Incidente
-            </mat-label>
-            <input
-              matInput
-              placeholder="Tipo de Incidente"
-              formControlName="tipoIncidente"
-            />
-            <mat-error
-              *ngIf="obtenerControlCampo('tipoIncidente')?.errors?.['required']"
-            >
+            <mat-label>Tipo de Incidente</mat-label>
+            <mat-select placeholder="Tipo de Incidente" formControlName="tipoIncidente">
+              <mat-option *ngFor="let t of tiposIncidentes" [value]="t.value">{{
+                t.viewValue
+                }}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="obtenerControlCampo('tamanioVehiculo')?.errors?.['required']">
               El tipo de incidente es obligatorio.
             </mat-error>
           </mat-form-field>
+
 
           <mat-form-field class="example-full-width">
             <mat-label>usuarios</mat-label>
