--- a/SAFE_PARKING_FRONT/src/app/components/pago/listar-admin-pago/listar-admin-pago.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/pago/listar-admin-pago/listar-admin-pago.component.html
@@ -12,7 +12,7 @@
 
     <body>
         <div class="litle">
-            <h2 style="text-align: center">LISTA DE PAGOS</h2>
+            <h2 style="text-align: center">Lista de pagos</h2>
         </div>
 
         <div class="container">
