--- a/SAFE_PARKING_FRONT/src/app/components/horario/creaedita-horario/creaedita-horario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/horario/creaedita-horario/creaedita-horario.component.html
@@ -68,20 +68,12 @@
         </mat-form-field>
 
         <br />
-        <button
-          mat-raised-button
-          color="primary"
-          routerLink="/horarios/listar_admin_horarios"
-        >
-          REGISTRAR
-        </button>
-        <button
-          mat-raised-button
-          color="warn"
-          routerLink="/horarios/listar_admin_horarios"
-        >
-          CANCELAR
-        </button>
+        <div class="btn-container">
+          <button mat-raised-button color="primary">Registrar</button>
+          <button mat-raised-button color="warn" routerLink="/listar">
+            CANCELAR
+          </button>
+        </div>
       </form>
     </div>
   </body>
