--- a/SAFE_PARKING_FRONT/src/app/components/incidente/buscar-incidente/buscar-incidente.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/buscar-incidente/buscar-incidente.component.html
@@ -9,24 +9,24 @@
   </head>
 
   <body>
-    <div class="search-form">
-      <div class="form-group">
-        <label for="incidenteIdInput">Ingrese el ID del incidente:</label>
-        <input id="incidenteIdInput" type="number" [(ngModel)]="idIncidente" />
+    <div class="form">
+      <div class="generic-group">
+        <label for="inputId">Ingrese el ID del incidente:</label>
+        <input id="inputId" type="number" [(ngModel)]="idIncidente" />
         <button (click)="buscar()">Buscar</button>
       </div>
       <hr />
-      <div class="incidente-details" *ngIf="incidente">
-        <h2 class="details-heading">Detalles del Incidente</h2>
-        <div class="info-box">
+      <div class="generic-details" *ngIf="incidente">
+        <h2 class="generic-heading">Detalles del Incidente</h2>
+        <div class="generic-box">
           <h1>Descripcion</h1>
           <p>{{ incidente.descripcion }}</p>
         </div>
-        <div class="info-box">
+        <div class="generic-box">
           <h1>Tipo de Incidente</h1>
           <p>{{ incidente.tipoIncidente }}</p>
         </div>
-        <div class="info-box">
+        <div class="generic-box">
           <h1>Usuario</h1>
           <p>{{ incidente.usuario.nombre }}</p>
         </div>
