--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-admin-localizaciones/listar-admin-localizaciones.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-admin-localizaciones/listar-admin-localizaciones.component.css
@@ -7,10 +7,11 @@ body {
 
 table {
   background-color: rgb(255, 255, 255);
+  
 }
 
 .container {
-  width: 50%;
+  max-width: 1200px;
   padding: 20px;
   background-color: #fff;
   border-radius: 8px;
