--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-admin-localizaciones/listar-admin-localizaciones.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-admin-localizaciones/listar-admin-localizaciones.component.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="litle">
-      <h2 style="text-align: center">LISTA DE LOCALIZACIONES</h2>
+      <h2 style="text-align: center">Lista de localizaciones</h2>
     </div>
 
     <div class="container">
@@ -102,6 +102,7 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
+      <br>
       <mat-paginator
         [pageSizeOptions]="[5, 10, 25, 100]"
         showFirstLastButtons
