--- a/SAFE_PARKING_FRONT/src/app/components/membresia/buscar-membresia/buscar-membresia.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/buscar-membresia/buscar-membresia.component.html
@@ -8,34 +8,39 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="search-form">
-      <div class="form-group">
-        <label for="membresiaIdInput">Ingrese el ID de la membresia:</label>
-        <input id="membresiaIdInput" type="number" [(ngModel)]="idMembresia" />
+    <div class="form">
+      <div class="generic-group">
+        <label for="inputId">Ingrese el ID:</label>
+        <input id="inputId" type="number" [(ngModel)]="id" />
+        <mat-error *ngIf="idNoEncontrado"
+          >El ID ingresado no existe. Por favor, intente con otro ID.</mat-error
+        >
+        <br />
         <button (click)="buscar()">Buscar</button>
       </div>
       <hr />
-      <div class="membresia-details" *ngIf="membresia">
-        <h2 class="details-heading">Detalles de la membresia</h2>
-        <div class="info-box">
+      <div class="generic-details" *ngIf="membresia">
+        <h2 class="generic-heading">Detalles de la membresia</h2>
+        <div class="generic-box">
           <h1>Tipo de membresia</h1>
           <p>{{ membresia.tipoMembresia }}</p>
         </div>
-        <div class="info-box">
+        <div class="generic-box">
           <h1>Fecha inicio</h1>
           <p>{{ membresia.fechaInicio }}</p>
         </div>
-        <div class="info-box">
+        <div class="generic-box">
           <h1>Fecha de expiracion</h1>
           <p>{{ membresia.fechaFin }}</p>
         </div>
-        <div class="info-box">
+        <div class="generic-box">
           <h1>Precio</h1>
           <p>{{ membresia.precio }}</p>
         </div>
         <!-- Agrega más campos según la estructura de tu objeto Vehiculo -->
       </div>
     </div>
-    <hr />
+
+
   </body>
 </html>
