--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/creaedita-vehiculos/creaedita-vehiculos.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/creaedita-vehiculos/creaedita-vehiculos.component.css
@@ -3,23 +3,30 @@
   display: flex;
 }
 
-
-
 h1 {
   text-align: center;
+  padding: 20px;
+}
+h2 {
+  text-align: center;
+  padding: 15px;
 }
 
 .secciones {
   margin: 20px;
   width: 70%; /* Expand to full width */
-  background-color: aqua;
+  background-color: rgb(201, 201, 201);
   align-items: center;
 
 }
 
-.paleta{
-margin: 0px 20%;
+.paleta {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
 }
+
 .example-full-width {
   margin: 0 20px;
   width: 90%;
@@ -27,13 +34,18 @@ margin: 0px 20%;
 
 .image-upload {
   width: 100%;
+  margin: 0 20px;
 }
 
 /* Style the buttons */
 .btn-container {
-  justify-content: space-between;
+  justify-content: center;
   margin-top: 20px;
   width: 100%;
+  text-align: center;
+}
+button{
+  margin: 10px;
 }
 
 /* You might need to adjust specific classes for Angular Material components */
@@ -63,3 +75,4 @@ img {
 input[type="file"] {
   background-color: rgb(173, 173, 182);
 }
+
