creación e implementación del componente buscar de la entidad Usuario
creación e implementación del componente buscar de la entidad Usuario

--- a/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
@@ -53,8 +53,10 @@
       <mat-icon class="icon-up">arrow_drop_up</mat-icon>
     </label>
     <ul class="sub-menu">
+      <li><a href="usuarios/buscar_usuarios">Buscar usuarios </a></li>
       <li><a href="usuarios/registrar_usuarios">Registrar usuarios</a></li>
       <li><a href="usuarios/listar_admin_usuarios">Listar usuarios (admin) </a></li>
+      
     </ul>
     <input type="checkbox" class="menu-toggle" id="menu6">
     <label for="menu6" class="menu">
