--- a/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.html
@@ -2,22 +2,24 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+
     <div class="container" style="text-align: center">
         <h2>Registro de Comentario</h2>
         <form [formGroup]="form" (submit)="aceptar()" class="example-form">
-            
+
             <mat-form-field class="example-full-width" *ngIf="edicion">
                 <mat-label>codigo</mat-label>
-                <input matInput placeholder="Id" formControlName="idComentario" readonly="true"/>
-              </mat-form-field>
-              <br />
+                <input matInput placeholder="Id" formControlName="idComentario" readonly="true" />
+            </mat-form-field>
+            <br />
 
 
             <mat-form-field class="example-full-width">
@@ -47,29 +49,19 @@
                         El codigo es obligatorio.
                     </mat-error>
                 </mat-select>
-                
+
             </mat-form-field>
 
             <br />
             <mat-form-field appearance="fill" class="example-full-width">
-              <input
-                matInput
-                placeholder="Ingrese fecha"
-                [matDatepicker]="picker"
-                formControlName="fechaCreacion"
-                [min]="minFecha"
-              />
-              <mat-hint>MM/DD/YYYY</mat-hint>
-              <mat-datepicker-toggle
-                matIconSuffix
-                [for]="picker"
-              ></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
-              <mat-error
-                *ngIf="obtenerControlCampo('fechaCreacion')?.errors?.['required']"
-              >
-               La fecha de creación es obligatoria.
-              </mat-error>
+                <input matInput placeholder="Ingrese fecha" [matDatepicker]="picker" formControlName="fechaCreacion"
+                    [min]="minFecha" />
+                <mat-hint>MM/DD/YYYY</mat-hint>
+                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+                <mat-error *ngIf="obtenerControlCampo('fechaCreacion')?.errors?.['required']">
+                    La fecha de creación es obligatoria.
+                </mat-error>
             </mat-form-field>
             <br />
 
@@ -83,4 +75,5 @@
     </div>
 
 </body>
+
 </html>
