--- a/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/listar-admin-horario-estacionamiento/listar-admin-horario-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/listar-admin-horario-estacionamiento/listar-admin-horario-estacionamiento.component.html
@@ -52,31 +52,24 @@
         <ng-container matColumnDef="accion01">
           <th mat-header-cell *matHeaderCellDef>Acciones</th>
           <td mat-cell *matCellDef="let element">
-            <button
-              mat-raised-button
-              color="warn"
-              [routerLink]="['ediciones', element.idHorarioEstacionamiento]"
-            >
-              Actualizar
-            </button>
-          </td></ng-container
-        >
+              <button mat-raised-button color="primary" [routerLink]="['ediciones', element.idHorarioEstacionamiento]">
+                  <mat-icon>edit</mat-icon> Editar
+              </button>
+          </td>
+        </ng-container>
         <ng-container matColumnDef="accion02">
           <th mat-header-cell *matHeaderCellDef>Acciones</th>
           <td mat-cell *matCellDef="let element">
-            <button
-              mat-raised-button
-              color="accent"
-              (click)="eliminar(element.idHorarioEstacionamiento)"
-            >
-              Eliminar
-            </button>
-          </td></ng-container
-        >
+              <button mat-raised-button color="warn" (click)="eliminar(element.idHorarioEstacionamiento)">
+                  <mat-icon>delete</mat-icon> Eliminar
+              </button>
+          </td>
+        </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
+      <br>
       <mat-paginator
         [pageSizeOptions]="[5, 10, 25, 100]"
         showFirstLastButtons
