--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-admin-localizaciones/listar-admin-localizaciones.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-admin-localizaciones/listar-admin-localizaciones.component.html
@@ -78,27 +78,19 @@
         <ng-container matColumnDef="accion01">
           <th mat-header-cell *matHeaderCellDef>Acciones</th>
           <td mat-cell *matCellDef="let element">
-            <button
-              mat-raised-button
-              color="warn"
-              [routerLink]="['ediciones', element.idLocalizacion]"
-            >
-              Actualizar
-            </button>
-          </td></ng-container
-        >
+              <button mat-raised-button color="primary" [routerLink]="['ediciones', element.idLocalizacion]">
+                  <mat-icon>edit</mat-icon> Editar
+              </button>
+          </td>
+        </ng-container>
         <ng-container matColumnDef="accion02">
           <th mat-header-cell *matHeaderCellDef>Acciones</th>
           <td mat-cell *matCellDef="let element">
-            <button
-              mat-raised-button
-              color="accent"
-              (click)="eliminar(element.idLocalizacion)"
-            >
-              Eliminar
-            </button>
-          </td></ng-container
-        >
+              <button mat-raised-button color="warn" (click)="eliminar(element.idLocalizacion)">
+                  <mat-icon>delete</mat-icon> Eliminar
+              </button>
+          </td>
+        </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
