--- a/SAFE_PARKING_FRONT/src/app/components/pago/listar-admin-pago/listar-admin-pago.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/pago/listar-admin-pago/listar-admin-pago.component.html
@@ -57,21 +57,22 @@
                 </ng-container>
 
                 <ng-container matColumnDef="accion01">
-                    <th mat-header-cell *matHeaderCellDef>Modificar</th>
+                    <th mat-header-cell *matHeaderCellDef>Acciones</th>
                     <td mat-cell *matCellDef="let element">
                         <button mat-raised-button color="primary" [routerLink]="['ediciones', element.idPago]">
-                            Actualizar
+                            <mat-icon>edit</mat-icon> Editar
                         </button>
                     </td>
-                </ng-container>
-                <ng-container matColumnDef="accion02">
-                    <th mat-header-cell *matHeaderCellDef>Eliminar</th>
+                  </ng-container>
+                  <ng-container matColumnDef="accion02">
+                    <th mat-header-cell *matHeaderCellDef>Acciones</th>
                     <td mat-cell *matCellDef="let element">
                         <button mat-raised-button color="warn" (click)="eliminar(element.idPago)">
-                            Eliminar
+                            <mat-icon>delete</mat-icon> Eliminar
                         </button>
                     </td>
-                </ng-container>
+                  </ng-container>
+                
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
             </table>
