--- a/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.css
@@ -1,11 +1,3 @@
-/* Estilos generales */
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
-  height: 100%;
-  padding: 20px;
-}
-
 .container {
   max-width: 600px;
   padding: 20px;
@@ -13,10 +5,14 @@ body {
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 80px;
+  /* Centra horizontalmente */
+  margin-top: 50px;
+}
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f2f2f2;
+  height: 100%;
+  padding: 20px;
 }
 
 
