--- a/SAFE_PARKING_FRONT/src/app/components/horario/creaedita-horario/creaedita-horario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/horario/creaedita-horario/creaedita-horario.component.css
@@ -2,7 +2,10 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f2f2f2;
+  height: 100%;
+  padding: 20px;
 }
+
 
 .container {
   max-width: 600px;
