--- a/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.html
@@ -8,17 +8,23 @@
   <body>
     <div [hidden]="route.children.length !== 0">
       <app-navbar></app-navbar>
-      <div class="titulo">
-        <h2>Registrar Incidente</h2>
-      </div>
+
       <div class="container">
         <form [formGroup]="form" (submit)="registrar()" class="example-form">
+          <div class="titulo">
+            <h2>Registrar Incidente</h2>
+          </div>
           <br />
 
-          <mat-form-field class="example-full-width" *ngIf="edicion"> <!--*ngIf="edicion" es para que se meustre en la edicion-->
+          <mat-form-field class="example-full-width" *ngIf="edicion">
+            <!--*ngIf="edicion" es para que se meustre en la edicion-->
             <mat-label>id Incidente</mat-label>
-            <input matInput placeholder="idIncidente" formControlName="idIncidente" />
-        </mat-form-field>
+            <input
+              matInput
+              placeholder="idIncidente"
+              formControlName="idIncidente"
+            />
+          </mat-form-field>
 
           <mat-form-field class="example-full-width">
             <mat-label> <mat-icon>tab</mat-icon> Descripcion </mat-label>
@@ -36,16 +42,20 @@
 
           <mat-form-field class="example-full-width">
             <mat-label>Tipo de Incidente</mat-label>
-            <mat-select placeholder="Tipo de Incidente" formControlName="tipoIncidente">
+            <mat-select
+              placeholder="Tipo de Incidente"
+              formControlName="tipoIncidente"
+            >
               <mat-option *ngFor="let t of tiposIncidentes" [value]="t.value">{{
                 t.viewValue
-                }}</mat-option>
+              }}</mat-option>
             </mat-select>
-            <mat-error *ngIf="obtenerControlCampo('tipoIncidente')?.errors?.['required']">
+            <mat-error
+              *ngIf="obtenerControlCampo('tipoIncidente')?.errors?.['required']"
+            >
               El tipo de incidente es obligatorio.
             </mat-error>
           </mat-form-field>
-
 
           <mat-form-field class="example-full-width">
             <mat-label>usuarios</mat-label>
