--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/creaedita-localizaciones/creaedita-localizaciones.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/creaedita-localizaciones/creaedita-localizaciones.component.css
@@ -1,24 +1,28 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-}
+
+
 h2{
   text-align: center;
 }
 .container {
-  background-color: #fff;
-  border: 1px solid #ccc;
-  margin: 20px auto;
+  max-width: 600px;
   padding: 20px;
-  max-width: 1200px;
-  box-shadow: 0 0 10px #ccc;
-  border-radius: 5px;
-  width: 800px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
+  /* Centra horizontalmente */
+  margin-top: 50px;
 }
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f2f2f2;
+  height: 1200px;
+  padding: 20px;
+}
+.longitudes{
+  display: flex;
+}
+
 
 .container h1 {
   font-size: 24px;
@@ -26,27 +30,13 @@ h2{
   color: #222;
 }
 
-.example-form {
-  width: 80%;
-  margin: 0 auto;
-  margin-top: 20px;
-  padding: 20px;
-  background-color: #f5f5f5;
+
+
+.example-full-width {
+  width: 100%;
+  margin: 2px;
 }
 
-mat-form-field {
-  width: 100%;
-}
-
-mat-input {
-  font-size: 16px;
-  padding: 10px;
-  width: 100%;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  color: #222;
-  font-family: sans-serif;
-}
 
 mat-error {
   color: red;
@@ -57,13 +47,9 @@ mat-error {
 button {
   font-size: 16px;
   padding: 10px;
-  width: 100%;
+
   margin-top: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #008000;
-  color: #fff;
-  font-family: sans-serif;
+
 }
 
 button[color="warn"] {
