--- a/SAFE_PARKING_FRONT/src/app/components/membresia/creaedita-membresia/creaedita-membresia.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/creaedita-membresia/creaedita-membresia.component.html
@@ -8,11 +8,11 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="titulo">
-      <h2>Registrar</h2>
-    </div>
     <div class="container">
       <form [formGroup]="form" (submit)="registrar()" class="example-form">
+        <div class="titulo">
+          <h2>REGISTRO DE MEMBRESIAS</h2>
+        </div>
         <br />
         <mat-form-field class="example-full-width">
           <mat-label> <mat-icon>tab</mat-icon> Tipo de membresia </mat-label>
@@ -73,18 +73,22 @@
         </div>
         <mat-form-field class="example-full-width">
           <mat-label> <mat-icon>attach_money</mat-icon> Precio </mat-label>
-          <input type="number" matInput placeholder="Precio" formControlName="precio" />
+          <input
+            type="number"
+            matInput
+            placeholder="Precio"
+            formControlName="precio"
+          />
           <mat-error
             *ngIf="obtenerControlCampo('precio')?.errors?.['required']"
           >
             El precio es obligatorio.
           </mat-error>
         </mat-form-field>
-        
-        <br />
+
         <button
-          class="boton_registro"
-          mat-button
+          mat-raised-button
+          color="primary"
           [routerLink]="['/membresia/listar_membresias']"
         >
           <mat-icon>input</mat-icon> Registrar
