--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/creaedita-usuario/creaedita-usuario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/creaedita-usuario/creaedita-usuario.component.css
@@ -1,37 +1,76 @@
-/* Estilos generales */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
-    height: 100%;
-    padding: 20px;
-}
-
-.container {
-    max-width: 800px;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 80px;
-}
-
-
-h1 {
-    color: #333;
-}
 
 /* Estilos para los campos de formulario */
-mat-form-field {
-    width: 800px;
-    margin-bottom: 15px;
+.container {
+  margin-bottom: 50px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
+  /* Centra horizontalmente */
+  margin-top: 50px;
+  max-width: 98%;
 }
-
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f2f2f2;
+  height: 100%;
+  padding: 20px;
+}
 /*Estilos para los botones*/
 
 button {
     margin: 10px;
 }
+
+.example-form{
+  max-height: 600px;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+
+
+}
+.formularios{
+  display: flex;
+  border-radius: 8px;
+  height: 90%;
+
+}
+.example-full-width{
+  margin: 5px;
+  width: 90%;
+
+}
+.secciones{
+  margin: 5px;
+  width: 70%; /* Expand to full width */
+  background-color: rgb(221, 221, 221);
+  align-items: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+
+
+}
+.sub-seccion{
+  display: flex;
+  width: 92.5%;
+  margin: 0 auto;
+
+}
+.image-upload {
+  max-width: 90%;
+  max-height: 90%;
+  margin: 0 20px;
+}
+
+/* Additional styling for the uploaded image */
+img {
+  max-width: 40%;
+  max-height: 40%;
+  margin-top: 10px;
+
+}
+input[type="file"] {
+  background-color: rgb(173, 173, 182);
+}
+
